Use a better way to route.

--- a/freecodecamp/tribute/index.go.html
+++ b/freecodecamp/tribute/index.go.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tribute for Ernest Hemingway</title>
-    <link rel="stylesheet" type="text/css" href="static/tribute/index.css">
+    <link rel="stylesheet" type="text/css" href="/static/freecodecamp/tribute/index.css">
 </head>
 <body>
 <div id="layout">
