Add CSS for starbuzz.

--- a/headfirst/starbuzz/index.go.html
+++ b/headfirst/starbuzz/index.go.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to Starbuzz</title>
+    <style type="text/css">
+        body {
+            background-color: #d3b8ae;
+            margin-left: 20%;
+            margin-right: 20%;
+            border: 2px dotted black;
+            padding: 10px 10px 10px 10px;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
 <h1>Starbuzz Coffee Beverages</h1>
