--- a/headfirst/starbuzz/mission.go.html
+++ b/headfirst/starbuzz/mission.go.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Starbuzz Missions</title>
+    <title>Starbuzz Mission</title>
+    <style type="text/css">
+        body {
+            background-color: #d3b8ae;
+            margin-left: 20%;
+            margin-right: 20%;
+            border: 2px dotted black;
+            padding: 10px 10px 10px 10px;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
-
+    <h1>Starbuzz Coffee's Mission</h1>
+    <p>To provide all the caffeine that you need to power your</p>
+    <p>life. Just drink it.</p>
 </body>
 </html>
