--- a/static/headfirst/lounge/lounge.html
+++ b/static/headfirst/lounge/lounge.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <h1>Welcome to the New and Improved Head First Lounge</h1>
-    <img src="/static/headfirst/lounge/images/drinks.gif">
+    <img src="images/drinks.gif">
     <p>
-        Join us any evening for refreshing <a href="elixir">elixirs</a>,
+        Join us any evening for refreshing <a href="beverages/elixir.html">elixirs</a>,
        conversation and maybe a game or two of 
        <em>Dance Dance Revolution</em>.
        Wireless access is always provided;  
@@ -15,7 +15,7 @@
     <h2>Directions</h2>
     <p>
       You'll find us right in the center of downtown Webville.   
-        If you need help finding us, check out our detailed <a href="directions">directions</a>.
+        If you need help finding us, check out our detailed <a href="about/directions.html">directions</a>.
       Come join us!
     </p>
   </body>
